<resources>
    <string name="app_name">Laundry App</string>
    <string name="number_cs">+6285241527504</string>
    <string name="url_tutorial_app">https://www.youtube.com/playlist?list=PLUs9BkKMLf4RpbKcMC3s-3UuDBlNHnbVh</string>
    <string name="message_cs">Hai Customer Service %1$s, saya ingin bertanya tentang aplikasi.</string>

    <string name="bank">BSI/Bank Syariah Indonesia 4462441120</string>
    <string name="rek_bsi">4462441120</string>
    <string name="number_ovo">085241527504</string>
    <string name="number_gopay">085241527504</string>
    <string name="ovo">OVO 085241527504</string>
    <string name="go_pay">GOPAY 085241527504</string>

    <string name="title_new_user">Selamat Datang</string>
    <string name="title_home">Home</string>
    <string name="title_transaction">Transaksi</string>
    <string name="title_other">Lainnya</string>

    <string name="title_bottom_sheet">Title Bottom Sheet</string>
    <string name="note_empty_data">Data %s kosong</string>
    <string name="note_empty_search_data">Data pencarian %s kosong</string>
    <string name="select_status">Select Status</string>

    <string name="limit_extend">Batas pemakaian</string>
    <string name="extend">Perpanjang</string>
    <string name="cs_extend">Cs Perpanjang</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="save">SIMPAN</string>

    <string name="location_unit">Lokasi Kamar/Unit</string>
    <string name="subtitle_tenant">Penyewa/Tenant</string>
    <string name="subtitle_customer">Pelanggan</string>
    <string name="subtitle_number_phone">Nomor Telepon</string>
    <string name="subtitle_unit">Kamar/Unit</string>
    <string name="subtitle_unit_move">Kamar/Unit Tujuan</string>
    <string name="process">PROSES</string>
    <string name="invoice">Invoice Penagihan</string>
    <string name="bill">Bukti Pembayaran</string>
    <string name="add_cash_flow">Tambah Alur Kas</string>
    <string name="add_cash_flow_out">Tambah Data Pengeluaran</string>
    <string name="add_booking">Booking Unit/Kamar</string>
    <string name="cancel_booking">Cancel Booking Unit/Kamar</string>
    <string name="info_add_cash_flow">Silahkan pilih penyewa, kost atau kamar jika alur kas terkait dengan salah satu, semuanya atau tidak memilih apapun</string>
    <string name="booking">Booking Unit/Kamar</string>
    <string name="extend_rent">Perpanjang Sewa</string>
    <string name="finish_renovation">Laporan Pekerjaan</string>
    <string name="check_out">Check Out</string>
    <string name="move_unit">Pindah Unit/Kamar</string>
    <string name="ok">OK</string>

    <string name="title_booking">Booking</string>
    <string name="subtitle_booking">Lihat data booking Unit/Kamar</string>
    <string name="title_credit_tenant">Piutang Tenant/Penyewa</string>
    <string name="title_detail_credit_tenant">Detail Piutang Penyewa</string>
    <string name="payment_detail_credit_tenant">Bayar Piutang Penyewa</string>
    <string name="title_history_credit_tenant">Riwayat Pembayaran Piutang</string>
    <string name="title_history">Riwayat Pembayaran</string>
    <string name="title_payment_credit_debit">Pembayaran Hutang Piutang</string>
    <string name="subtitle_credit_tenant">Kelola pembayaran angsuran penyewa</string>
    <string name="title_debt_credit">Hutang Piutang</string>
    <string name="title_add_debt_credit">Tambah Hutang Piutang</string>
    <string name="title_add_debt_credit_customer">Tambah Pelanggan</string>
    <string name="subtitle_debt_credit_tenant">Kelola data hutang dan piutang</string>
    <string name="title_kost">Kost</string>
    <string name="subtitle_other_kost">List kost</string>
    <string name="title_type_unit">Tipe Unit/Kamar</string>
    <string name="subtitle_type_unit">Lihat data tipe/jenis kamar</string>
    <string name="title_tutorial">Tutorial Aplikasi</string>
    <string name="subtitle_tutorial">Lihat video tutorial aplikasi</string>
    <string name="title_customer_service">Customer Service</string>
    <string name="subtitle_customer_service">Hubungi customer service apapun kendala anda\nChat Via WA 085241527504</string>
    <string name="title_profile">Profil</string>
    <string name="subtitle_profile">Lihat profil dan Wa yang digunakan</string>

    <string name="title_add_kost">Tambah Kost</string>
    <string name="title_add_transaction">Tambah Transaksi</string>
    <string name="title_payment_transaction">Pembayaran</string>
    <string name="title_printer">Printer</string>
    <string name="subtitle_printer">Pilih printer thermal</string>
    <string name="title_product">Produk/Layanan</string>
    <string name="subtitle_product">Sesuaikan Produk/Layanan Tersedia</string>
    <string name="title_category">Kategori</string>
    <string name="title_cashier">Kasir</string>
    <string name="subtitle_cashier">Kelola Data Kasir</string>
    <string name="title_add_cashier">Tambah Kasir</string>
    <string name="title_customer">Customer/Pelanggan</string>
    <string name="subtitle_customer_2">Kelola Data Customer/Pelanggan</string>
    <string name="title_add_customer">Tambah Customer/Pelanggan</string>
    <string name="title_cash_flow">Alur Kas</string>
    <string name="title_cash_flow_out">Alur Kas Pengeluaran</string>
    <string name="subtitle_cash_flow">Pantau Pengeluaran Usaha Disini</string>
    <string name="title_cash_flow_category">Kategori Alur Kas</string>
    <string name="subtitle_cash_flow_category">Sesuaikan Alur Kas berdasarkan kategori</string>
    <string name="add_category">Tambah Kategori</string>
    <string name="update_category">Update Kategori</string>
    <string name="update_cash_flow">Update Alur Kas</string>
    <string name="update_cash_flow_out">Update Data Pengeluaran</string>
    <string name="add_product">Tambah Layanan</string>
    <string name="update_product">Update Layanan</string>
    <string name="subtitle_category">Bagi produk/layanan berdasarkan kategori</string>
    <string name="title_update_cart">Update Keranjang</string>
    <string name="title_check_in">Check In</string>
    <string name="title_check_out">Check Out</string>
    <string name="title_move_unit">Pindah Kamar/Unit</string>
    <string name="title_update_unit">Update Kamar/Unit</string>
    <string name="title_add_unit_type">Tambah Tipe Unit/Kamar</string>
    <string name="title_add_tenant">Tambah Penyewa</string>
    <string name="title_update_tenant">Update Penyewa</string>
    <string name="title_update_unit_type">Update Tipe Unit/Kamar</string>
    <string name="title_update_kost">Update Kost</string>
    <string name="title_update_profil">Update Profil</string>
    <string name="please_wait">Tunggu sebentar</string>
    <string name="try_again">Coba lagi</string>
    <string name="success_add_data">Tambah data berhasil</string>
    <string name="success_add_data_customer">Tambah data pelanggan berhasil</string>
    <string name="success_add_booking">Tambah Booking berhasil</string>
    <string name="success_payment_debt">Pembayaran Hutang berhasil</string>
    <string name="success_payment">Pembayaran berhasil</string>
    <string name="success_delete_payment_debt">Hapus Hutang berhasil</string>
    <string name="success_delete_payment_credit_debit">Hapus Hutang atau Piutang berhasil</string>
    <string name="success_cancel_booking">Batalkan Booking berhasil</string>
    <string name="success_check_in">Check In berhasil</string>
    <string name="success_move_unit">Pindah Unit/Kamar berhasil</string>
    <string name="success_report">Laporan berhasil</string>
    <string name="success_check_out">Check Out berhasil</string>
    <string name="success_extend_rent">Perpanjang sewa berhasil</string>
    <string name="success_update_data">Update data berhasil</string>
    <string name="error_input_data">Ada kesalahan input</string>
    <string name="subtitle_price_unit">Biaya/Harga Sewa Kamar</string>
    <string name="subtitle_price_day">1 Hari</string>
    <string name="subtitle_price_week">1 Minggu</string>
    <string name="subtitle_price_month">1 Bulan</string>
    <string name="subtitle_price_three_month">3 Bulan</string>
    <string name="subtitle_price_six_month">6 Bulan</string>
    <string name="subtitle_price_year">1 Tahun</string>
    <string name="subtitle_price_guarantee">Uang Deposit/Jaminan</string>
    <string name="subtitle_price_guarantee_back">Pengembalian Uang Deposit/Jaminan</string>
    <string name="price_guarantee">Uang Deposit/Jaminan</string>
    <string name="price_and_duration">Biaya/Harga dan Durasi</string>
    <string name="total_rental_price">Total Biaya Sewa</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="type_credit_debit">Tipe</string>
    <string name="payment_via">Pembayaran Secara</string>
    <string name="payment_return_via">Pengembalian Dana Secara</string>
    <string name="type_cash_flow">Tipe Alur Kas</string>
    <string name="payment_guarantee_via">Pengembalian Dana Secara</string>
    <string name="payment_finish_via">Bayar Biaya Secara</string>
    <string name="date_check_in">Tanggal Masuk</string>
    <string name="date_check_out">Tanggal Keluar</string>
    <string name="debt_tenant">Hutang Penyewa</string>
    <string name="debt_tenant_move">Hutang Pindah</string>
    <string name="debt_tenant_extend">Hutang Perpanjang</string>
    <string name="total_debt">Total Piutang</string>
    <string name="add">Tambah</string>
    <string name="subtitle_select_price">Pilih Harga dan Durasi</string>
    <string name="message_date_range_invalid">Tanggal awal dan akhir tidak sesuai</string>
    <string name="info_limit">Hai batas penggunaan aplikasi telah berakhir. Silahkan lakukan perpanjangan pada menu other/lainnya</string>

    <string name="support_by">Support by <b>JuraganKost.id</b></string>

    <string name="download">Download</string>
    <string name="share">Share</string>

    <string name="loading">Loading</string>
</resources>